force-app/main/default/objects/Bankruptcy__c/fields/Bankruptcy_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bankruptcy Attorney</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bankruptcies (Bankruptcy Attorney)</relationshipLabel>
    <relationshipName>Bankruptcies1</relationshipName>
    <type>Lookup</type>
</CustomField>