force-app/main/default/objects/Bankruptcy__c/fields/Bankruptcy_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Case_Number__c</fullName>
    <label>Bankruptcy Case Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>