force-app/main/default/objects/Bankruptcy__c/fields/Creditor_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Meeting_Date__c</fullName>
    <label>Creditor Meeting Date</label>
    <type>Date</type>
</CustomField>