force-app/main/default/objects/Bankruptcy__c/fields/Proof_Of_Claim_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Proof_Of_Claim_Due_Date__c</fullName>
    <label>Proof Of Claim Due Date</label>
    <type>Date</type>
</CustomField>