force-app/main/default/objects/Bankruptcy__c/fields/Relief_Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>Relief_Discharge_Date__c</fullName>
    <label>Relief/Discharge Date</label>
    <type>Date</type>
</CustomField>